--- a/bios6643_02.tex
+++ b/bios6643_02.tex
@@ -7,25 +7,10 @@
   ignorenonframetext,
 ]{beamer}
 \usepackage{pgfpages}
-% set the section number 
-\setbeamertemplate{section in toc}[sections numbered]
-\setbeamertemplate{subsection in toc}[subsections numbered]
-\setbeamertemplate{navigation symbols}{}
-% set the page
-\setbeamertemplate{footline}[page number]
 \setbeamertemplate{caption}[numbered]
 \setbeamertemplate{caption label separator}{: }
 \setbeamercolor{caption name}{fg=normal text.fg}
 \beamertemplatenavigationsymbolsempty
-
-%%
-%%% Definition of colors
-%%% Source: https://latexcolor.com/
-\definecolor{blanchedalmond}{rgb}{1.0, 0.92, 0.8}
-\definecolor{blond}{rgb}{0.98, 0.94, 0.75}
-%%% End of definition of colors
-%%
-
 % Prevent slide breaks in the middle of a paragraph
 \widowpenalties 1 10000
 \raggedbottom
@@ -60,12 +45,13 @@
   \frame{\subsectionpage}
 }
 \usepackage{lmodern}
-\usepackage{amssymb,amsmath}
+\usepackage{amsmath}
 \usepackage{ifxetex,ifluatex}
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
   \usepackage{textcomp} % provide euro and other symbols
+  \usepackage{amssymb}
 \else % if luatex or xetex
   \usepackage{unicode-math}
   \defaultfontfeatures{Scale=MatchLowercase}
@@ -88,54 +74,12 @@
     \setlength{\parskip}{6pt plus 2pt minus 1pt}}
 }{% if KOMA class
   \KOMAoptions{parskip=half}}
-  
-% adjust for sidebar
-  \setbeamertemplate{sidebar \beamer@sidebarside}
-  {
-    \beamer@tempdim=\beamer@sidebarwidth%
-    \advance\beamer@tempdim by -6pt%
-    \vskip4em%
-    \insertverticalnavigation{\beamer@sidebarwidth}%
-    \vfill
-    \ifx\beamer@sidebarside\beamer@lefttext%
-    \else%
-      \usebeamercolor{normal text}%
-      \llap{\usebeamertemplate***{navigation symbols}\hskip0.1cm}%
-      \vskip2pt%
-    \fi%
-  }%
-
-  \ifx\beamer@sidebarside\beamer@lefttext%
-    \defbeamertemplate*{sidebar right}{sidebar theme}
-    {%
-      \vfill%
-      \llap{\usebeamertemplate***{navigation symbols}\hskip0.1cm}%
-      \vskip2pt}
-  \fi
-
-\setbeamertemplate{section in sidebar}%{sidebar theme}
-{%
-  \vbox{%
-    \vskip1ex%
-    \beamer@sidebarformat{3pt}{section in sidebar}{\insertsectionheadnumber
-~\insertsectionhead}%
-  }%
-}
-\setbeamertemplate{section in sidebar shaded}%{sidebar theme}
-{%
-  \vbox{%
-    \vskip1ex%
-    \beamer@sidebarformat{3pt}{section in sidebar shaded}{\insertsectionheadnumber
-~\insertsectionhead}%
-  }%
-}  
-
 \makeatother
 \usepackage{xcolor}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={L2: Graphs and Principal Component Analysis},
+  pdftitle={BIOS6643 Longitudinal},
   pdfauthor={EJC},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
@@ -182,6 +126,7 @@
 \newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
 \newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 \usepackage{longtable,booktabs}
+\usepackage{calc} % for calculating minipage widths
 \usepackage{caption}
 % Make caption package work with longtable
 \makeatletter
@@ -191,72 +136,28 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{-\maxdimen} % remove section numbering
-
-%
-% When using babel or polyglossia with biblatex, loading csquotes is recommended 
-% to ensure that quoted texts are typeset according to the rules of your main language.
-%
-\usepackage{csquotes}
-
-%
-% blockquote
-%
-\definecolor{blockquote-border}{RGB}{221,221,221}
-\definecolor{blockquote-text}{RGB}{89,89,89}
-\usepackage{mdframed}
-\newmdenv[rightline=false,bottomline=false,topline=false,linewidth=3pt,linecolor=blockquote-border,skipabove=\parskip]{customblockquote}
-\renewenvironment{quote}{\begin{customblockquote}\list{}{\rightmargin=0em\leftmargin=0em}%
-\item\relax\color{blockquote-text}\ignorespaces}{\unskip\unskip\endlist\end{customblockquote}}
-
-%
-% Source Sans Pro as the de­fault font fam­ily
-% Source Code Pro for monospace text
-%
-% 'default' option sets the default 
-% font family to Source Sans Pro, not \sfdefault.
-%
-\usepackage[default]{sourcesanspro}
-\usepackage{sourcecodepro}
-
-% XeLaTeX specific adjustments for straight quotes: https://tex.stackexchange.com/a/354887
-% This issue is already fixed (see https://github.com/silkeh/latex-sourcecodepro/pull/5) but the 
-% fix is still unreleased.
-% TODO: Remove this workaround when the new version of sourcecodepro is reelased on CTAN.
-\ifxetex
-\makeatletter
-\defaultfontfeatures[\ttfamily]
-  { Numbers   = \sourcecodepro@figurestyle,
-    Scale     = \SourceCodePro@scale,
-    Extension = .otf }
-\setmonofont
-  [ UprightFont    = *-\sourcecodepro@regstyle,
-    ItalicFont     = *-\sourcecodepro@regstyle It,
-    BoldFont       = *-\sourcecodepro@boldstyle,
-    BoldItalicFont = *-\sourcecodepro@boldstyle It ]
-  {SourceCodePro}
-\makeatother
-\fi
-
 \AtBeginSubsection{}
 \AtBeginSection{}
+\ifluatex
+  \usepackage{selnolig}  % disable illegal ligatures
+\fi
 
-\title{L2: Graphs and Principal Component Analysis}
-\subtitle{BIOS6643}
+\title{BIOS6643 Longitudinal}
+\subtitle{L2 Graphs}
 \author{EJC}
 \date{}
-\institute{Department of Biostatistics \& Informatics, UCD Anschutz}
+\institute{Department of Biostatistics \& Informatics}
 
 \begin{document}
 \frame{\titlepage}
 
-\begin{frame}
-  \begin{columns}
-  \column{10cm}
-  \tableofcontents
-  \end{columns}
+\begin{frame}[allowframebreaks]
+  \tableofcontents[hideallsubsections]
 \end{frame}
+\hypertarget{learning-objectives}{%
+\section{Learning objectives:}\label{learning-objectives}}
+
 \begin{frame}{Learning objectives:}
-\protect\hypertarget{learning-objectives}{}
 \begin{enumerate}
 \item
   Become familiar with multiple ways of representing longitudinal and
@@ -270,19 +171,16 @@
 \section{Introduction}\label{introduction}}
 
 \begin{frame}{Introduction}
-\protect\hypertarget{introduction-1}{}
 \begin{itemize}
-\tightlist
 \item
   Line graph
 
   \begin{itemize}
-  \tightlist
   \item
     Visual staple for longitudinal data.
   \item
     Generalization of a scatterplot in which points are connected either
-    within subjects or the `correlated unit'.\\
+    within subjects or the `correlated unit'.
   \item
     Intuitive and indicates nested responses (e.g., repeated measures
     within subjects).
@@ -291,7 +189,6 @@
   Scatterplot
 
   \begin{itemize}
-  \tightlist
   \item
     Can use different symbols for subjects/objects on which repeated
     measures are taken (avoids criss-cross and tangle of lines in a line
@@ -312,9 +209,6 @@
   \end{itemize}
 \end{itemize}
 \end{frame}
-
-\hypertarget{line-graphs}{%
-\section{Line Graphs}\label{line-graphs}}
 
 \begin{frame}{Graphs for repeated measures data with one sample}
 \protect\hypertarget{graphs-for-repeated-measures-data-with-one-sample}{}
@@ -421,28 +315,24 @@ spaghetti plot.
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\StringTok{\textasciigrave{}}\AttributeTok{age (years)}\StringTok{\textasciigrave{}} \OtherTok{\textless{}{-}} \FunctionTok{c}\NormalTok{(}\DecValTok{8}\NormalTok{, }\FloatTok{8.5}\NormalTok{, }\DecValTok{9}\NormalTok{, }\FloatTok{9.5}\NormalTok{)}
-\DocumentationTok{\#\# read the dataset}
 \NormalTok{ramus\_w }\OtherTok{\textless{}{-}}\NormalTok{ here}\SpecialCharTok{::}\FunctionTok{here}\NormalTok{(}\StringTok{"data"}\NormalTok{, }\StringTok{"ramus.dat"}\NormalTok{) }\SpecialCharTok{\%\textgreater{}\%}
   \FunctionTok{read.table}\NormalTok{(}\AttributeTok{header =}\NormalTok{ T, }\AttributeTok{row.names =} \DecValTok{1}\NormalTok{,}
              \AttributeTok{sep =} \StringTok{","}\NormalTok{,  }\AttributeTok{skip =} \DecValTok{0}\NormalTok{) }\SpecialCharTok{\%\textgreater{}\%}
   \FunctionTok{rename}\NormalTok{(}\StringTok{"8"} \OtherTok{=} \DecValTok{2}\NormalTok{, }\StringTok{"8.5"} \OtherTok{=} \DecValTok{3}\NormalTok{, }\StringTok{"9"} \OtherTok{=} \DecValTok{4}\NormalTok{, }\StringTok{"9.5"} \OtherTok{=} \DecValTok{5}\NormalTok{) }
-\DocumentationTok{\#\# wide to long form pivot\_longer()}
+
 \NormalTok{ramus\_l }\OtherTok{\textless{}{-}}\NormalTok{ ramus\_w }\SpecialCharTok{\%\textgreater{}\%}
   \FunctionTok{pivot\_longer}\NormalTok{(}\AttributeTok{cols =} \FunctionTok{c}\NormalTok{(}\StringTok{"8"}\NormalTok{, }\StringTok{"8.5"}\NormalTok{, }\StringTok{"9"}\NormalTok{, }\StringTok{"9.5"}\NormalTok{), }
                \AttributeTok{names\_to =} \StringTok{"time"}\NormalTok{, }
                \AttributeTok{values\_to =} \StringTok{"ramus height (mm)"}\NormalTok{) }\SpecialCharTok{\%\textgreater{}\%}
   \FunctionTok{mutate}\NormalTok{(}\StringTok{\textasciigrave{}}\AttributeTok{age (years)}\StringTok{\textasciigrave{}} \OtherTok{=} \FunctionTok{as.numeric}\NormalTok{(time),}
          \AttributeTok{boy =} \FunctionTok{as.factor}\NormalTok{(boy))}
-\DocumentationTok{\#\# ggplot2::geom\_line()}
+
 \NormalTok{plot1 }\OtherTok{\textless{}{-}} \FunctionTok{ggplot}\NormalTok{() }\SpecialCharTok{+}
   \FunctionTok{geom\_line}\NormalTok{(}\AttributeTok{data =}\NormalTok{ ramus\_l, }
-            \DocumentationTok{\#\# must set "group"}
             \FunctionTok{aes}\NormalTok{(}\AttributeTok{group =}\NormalTok{ boy,}
                 \AttributeTok{x =} \StringTok{\textasciigrave{}}\AttributeTok{age (years)}\StringTok{\textasciigrave{}}\NormalTok{,}
                 \AttributeTok{y =} \StringTok{\textasciigrave{}}\AttributeTok{ramus height (mm)}\StringTok{\textasciigrave{}}\NormalTok{,}
                 \AttributeTok{color =}\NormalTok{ boy), }
-            \DocumentationTok{\#\# transparency}
             \AttributeTok{alpha =} \FloatTok{0.5}\NormalTok{) }
 \end{Highlighting}
 \end{Shaded}
@@ -504,24 +394,49 @@ spaghetti plot.
 \tiny
 \end{frame}
 
-\hypertarget{scatterplots}{%
-\section{Scatterplots}\label{scatterplots}}
+\begin{frame}[fragile]{Using GGPLOT in R}
+\protect\hypertarget{using-ggplot-in-r}{}
+The package \texttt{ggplot2::ggplot} is a more current graphing package;
+example code and plots shown below. Data are from Strand et al., 2018;
+these are fastest times by age in the Bolder Boulder 10K road race for
+men (left) and women (right); individual runners are shown in multiple
+years by using spaghetti noodles (those with only 1 point were modeled
+but not shown in these graphs); the dashed curve is the group average.
+For more detail, see Strand et al., 2018 (Journal of Quantitative
+Analysis in Sports).
+
+\tiny
+
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f0} \end{center}
+
+\tiny
+\end{frame}
+
+\begin{frame}{}
+\protect\hypertarget{section-4}{}
+\alert {need data and not sure about the code}
+
+\tiny\tiny
+\end{frame}
 
 \begin{frame}{Graphs for repeated measures data with multiple samples}
 \protect\hypertarget{graphs-for-repeated-measures-data-with-multiple-samples}{}
 \begin{itemize}
-\tightlist
 \item
   Multiple samples present a whole new set of issues when constructing
-  graphs.\\
-\item
-  Consider a simple generic data set with 2 groups (e.g., men, women),
-  where individuals are monitored over time.
+  graphs. Consider a simple generic data set with 2 groups (e.g., men,
+  women), where individuals are monitored over time.
 \item
   The curves are obtained from PROC MIXED, a procedure that we'll learn
   more about later. For now, it is enough to understand that it yields
-  predicted values based on the function in the MODEL statement. \tiny
+  predicted values based on the function in the MODEL statement.
 \end{itemize}
+\end{frame}
+
+\begin{frame}{Plotting longitudinal data at the group level, with fitted
+curves, using SAS}
+\protect\hypertarget{plotting-longitudinal-data-at-the-group-level-with-fitted-curves-using-sas}{}
+\tiny
 
 \begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f1} \end{center}
 
@@ -538,20 +453,13 @@ spaghetti plot.
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-4}{}
-\begin{itemize}
-\tightlist
-\item
-  Graphing in SAS has become somewhat easier via the SGPLOT, which
-  mimics some of the features that R graphing has.\\
-  -Below is a spaghetti plot of the same data. Note the minimal amount
-  of coding required to get the plot.\\
-\item
-  The `reg' statement would allow for plotting of group means, and the
-  `degree' option can be added to get polynomial curves.\\
-\item
-  See the SAS Help Documentation for more detail.
-\end{itemize}
+\protect\hypertarget{section-5}{}
+Graphing in SAS has become somewhat easier via the SGPLOT, which mimics
+some of the features that R graphing has. Below is a spaghetti plot of
+the same data. Note the minimal amount of coding required to get the
+plot. The `reg' statement would allow for plotting of group means, and
+the `degree' option can be added to get polynomial curves. See the SAS
+Help Documentation for more detail.
 
 \tiny
 
@@ -573,8 +481,8 @@ spaghetti plot.
   AIDS Cohort Study (MACS).
 \item
   Some of Diggle et al.'s graphing concepts are used here, for data
-  involving subjects with idiopathic pulmonary fibrosis (IPF) analyzed
-  at NJH.
+  involving subjects with idiopathic pulmonary fibrosis (IPF) that I
+  analyzed at NJH.
 \item
   The outcome `\% predicted diffusing capacity of the lung' was measured
   on 321 IPF subjects, both before and after diagnosis. This measure
@@ -583,11 +491,8 @@ spaghetti plot.
 \end{itemize}
 \end{frame}
 
-\hypertarget{typical-spaghetti-plot-for-the-data.}{%
-\section{Typical spaghetti plot for the
-data.}\label{typical-spaghetti-plot-for-the-data.}}
-
 \begin{frame}{Typical spaghetti plot for the data.}
+\protect\hypertarget{typical-spaghetti-plot-for-the-data.}{}
 \tiny
 
 \begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f4} \end{center}
@@ -615,70 +520,61 @@ Scatterplot of IPF data with line graph of 9 randomly selected subjects.
 
 \tiny
 
-\begin{center}\includegraphics[width=0.75\linewidth]{figs_L2/L2-f6} \end{center}
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f6} \end{center}
 
 \tiny
 \end{frame}
 
-\begin{frame}{Systematically selected subjects}
+\begin{frame}{systematically selected subjects}
 \protect\hypertarget{systematically-selected-subjects}{}
 Scatterplot of IPF data with line graph of systematically selected
 subjects.
 
-The selection of subjects for Figure 2 was as follows:
+\tiny
 
-(i). residuals were calculated for each data point based on
-nonparametric regression fit in Figure 1;
-
-(ii). for each subject, the mean residual was determined;
-
-(iii). line segments were included for subjects with certain percentiles
-for the mean residual variable. \tiny
-
-\begin{center}\includegraphics[width=0.65\linewidth]{figs_L2/L2-f7} \end{center}
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f7} \end{center}
 
 \tiny
 \end{frame}
 
-\hypertarget{graphs-that-display-between--or-within-subject-variability}{%
-\section{Graphs that display between- or within-subject
-variability}\label{graphs-that-display-between--or-within-subject-variability}}
-
-\begin{frame}{Graphs that display between- or within-subject
+\begin{frame}{Graphs that demonstrate between-subject or within-subject
 variability}
+\protect\hypertarget{graphs-that-demonstrate-between-subject-or-within-subject-variability}{}
 \begin{itemize}
-\tightlist
 \item
   Mean estimates at individual time points are often graphed including
-  `error bars.'
+  `error bars' to indicate variability of data.
 \item
-  Consider the data from clinical trial reported in Katial et
-  al.~(2010).\\
+  Consider the following data from a clinical trial (Katial et al.,
+  2010). Subjects allergic to aspirin were given an aspirin
+  desensitization test over 1 day period. Several measures were taken
+  immediately before and after the desensitization, one being exhaled
+  nitric oxide (eNO). In addition, measures were taken again at 6
+  months. {[}Three measures were taken on each subject for several
+  subjects: BL, post-BL, 6m.{]}
 \item
-  Subjects allergic to aspirin were given an aspirin desensitization
-  test over 1 day period.\\
-\item
-  Several measures were taken immediately before (BL) and after
-  (post-BL) the desensitization, one being exhaled nitric oxide (eNO).
-  Some subjects also had measures at 6 months.
-\item
-  The following graph displays estimates at individual time points, with
-  confidence intervals (CI), based on a linear mixed model (LMM) fit.\\
-\item
-  \textbf{Are the means at BL and Post-BL time points significantly
-  different?} Tests for differences give a \(p=0.025\) for the
-  difference b/w the BL and post-BL, and \(p=0.40\) b/w the Bl and 6
-  months.\\
-  \tiny
+  The following graph displays estimates at individual time points (time
+  as class variable), with confidence intervals, based on a linear mixed
+  model fit. If we perform tests for differences between time points, we
+  find that \(p=0.025\) for the difference between the first and second
+  time points, and \(p=0.40\) between the first and third.
 \end{itemize}
+\end{frame}
 
-\begin{center}\includegraphics[width=0.32\linewidth]{figs_L2/L2-f8} \end{center}
+\begin{frame}{Line graph of means with CI's, eNO data}
+\protect\hypertarget{line-graph-of-means-with-cis-eno-data}{}
+\tiny
+
+\begin{center}\includegraphics[width=0.4\linewidth]{figs_L2/L2-f8} \end{center}
 
 \tiny
+
+\textbf{Question: are the means at BL and Post-BL time points
+significantly different?}
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-5}{}
+\protect\hypertarget{section-6}{}
 \begin{itemize}
 \item
   The previous graph does not demonstrate variability of within-subject
@@ -688,44 +584,47 @@ variability}
   This graph shows the variability of the difference estimates. Graphed
   are relative change estimates, which result since analysis of eNO was
   on the natural log scale; also plotted in the graph are 95\% CI's for
-  these relative estimates.\\
-  \tiny
+  these relative estimates.
 \end{itemize}
+
+\tiny
 
 \begin{center}\includegraphics[width=0.4\linewidth]{figs_L2/L2-f9} \end{center}
 
 \tiny
-
-\tiny
-
-Note in the first position of the graph we have the Day 2 estimate
-relative to BL, and the CI does not contain 0, which is consistent with
-\(p=0.025\) (since we constructed a 95\% CI).
-
-(In this graph the difference estimates are not joined with a line since
-the x-axis is not time, but rather it is the comparison of pairs of time
-points (one relative to another). (A reference line at \(y=0\) is
-included.)
 \end{frame}
 
-\hypertarget{lasagna-plots}{%
-\section{Lasagna plots}\label{lasagna-plots}}
+\begin{frame}{}
+\protect\hypertarget{section-7}{}
+\begin{itemize}
+\item
+  In the first position of the graph we have the Day 2 estimate relative
+  to BL, and the CI does not contain 0, which is consistent with
+  \(p=0.025\) (since we constructed a 95\% CI).
+\item
+  In this graph I do not join the difference estimates with a line since
+  the x-axis is not time, but rather it is the comparison of pairs of
+  time points (one relative to another). A reference line at \(y=0\) is
+  included.
+\end{itemize}
+\end{frame}
 
 \begin{frame}{Lasagna plots}
-While we're on the topic of Italian food, a `lasagna plot' is an
-alternative to the spaghetti plot (See Lasagna plots: a saucy
-alternative to spaghetti plots, Bruce Swihart et al., 2010, Epidemiology
-21: 621-625.) \tiny
+\protect\hypertarget{lasagna-plots}{}
+While we're on the topic of Italian food, a former student of mine got
+creative and developed the lasagna plot as an alternative to the
+spaghetti plot (Also see Lasagna plots: a saucy alternative to spaghetti
+plots, Bruce Swihart et al., 2010, Epidemiology 21: 621-625.)
 
-\begin{center}\includegraphics[width=0.85\linewidth]{figs_L2/L2-f10} \end{center}
+\tiny
+
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f10} \end{center}
 
 \tiny
 \end{frame}
 
-\hypertarget{pace-charts}{%
-\section{Pace charts}\label{pace-charts}}
-
 \begin{frame}{Pace charts}
+\protect\hypertarget{pace-charts}{}
 The last ``0.2'' miles of the 26.2 mile race was adjusted per mile
 distance, and shows that although the runner `hit the wall' in the last
 3 to 5 miles, he was able to finish strong. The finish time was 3 hours
@@ -739,7 +638,7 @@ and 6 minutes.
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-6}{}
+\protect\hypertarget{section-8}{}
 \tiny
 
 \begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f12} \end{center}
@@ -747,13 +646,9 @@ and 6 minutes.
 \tiny
 \end{frame}
 
-\hypertarget{graphs-for-unequally-spaced-data-with-common-time-points}{%
-\section{Graphs for unequally spaced data with common time
-points}\label{graphs-for-unequally-spaced-data-with-common-time-points}}
-
 \begin{frame}{Graphs for unequally spaced data with common time points}
+\protect\hypertarget{graphs-for-unequally-spaced-data-with-common-time-points}{}
 \begin{itemize}
-\tightlist
 \item
   A longitudinal experiment was conducted by Sorensen et al.~(2003,
   JACI) where measurements were taken at unequally spaced times.
@@ -770,7 +665,7 @@ points}\label{graphs-for-unequally-spaced-data-with-common-time-points}}
   challenge for chronic fatigue syndrome (CFS) and Control populations,
   are presented in the following graphs, with 95\% confidence intervals.
   Data were analyzed on the log scale and then inverted back for
-  presentation, resulting in a longer upper bars than lower.
+  presentation, resulting in a longer upper bars than lower. 
 \end{itemize}
 \end{frame}
 
@@ -785,7 +680,7 @@ categories}
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-7}{}
+\protect\hypertarget{section-9}{}
 CFS data, time as metric variable. This is a time-metric sensitive graph
 with the same data. Clearly the concentration of data on the left side
 makes it difficult to see what is going on.
@@ -798,7 +693,7 @@ makes it difficult to see what is going on.
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-8}{}
+\protect\hypertarget{section-10}{}
 This is the same basic display, but suppressing CI's for the 2nd and 3rd
 time points. Which of the 3 graphs is best?
 
@@ -807,34 +702,40 @@ time points. Which of the 3 graphs is best?
 \begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f15} \end{center}
 
 \tiny
-
-\textbf{See arrow plots in notes}
 \end{frame}
 
-\hypertarget{principal-components-analysis-pca}{%
-\section{Principal components analysis
-(PCA)}\label{principal-components-analysis-pca}}
+\begin{frame}{Arrow plots}
+\protect\hypertarget{arrow-plots}{}
+\tiny
+
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f17} \end{center}
+
+\tiny
+\end{frame}
+
+\hypertarget{pca-principal-components-analysis}{%
+\section{PCA (Principal components
+analysis)}\label{pca-principal-components-analysis}}
 
 \begin{frame}{Fundamentals of PCA}
 \protect\hypertarget{fundamentals-of-pca}{}
 \begin{itemize}
-\tightlist
 \item
-  Principal components analysis is a descriptive tool for longitudinal
+  Principal components analysis as a descriptive tool for longitudinal
   data
 \item
-  PCA becomes particularly useful for very large data sets with multiple
-  variables as a data reduction technique or to find important patterns.
+  PCA becomes particularly useful for very large data sets, as a data
+  reduction technique or to find important patterns.
 \item
-  PCA is used in genetic data analyses, pattern recognition data, growth
-  curve analysis, and even with meteorological data to identify
-  important climate change patterns.
+  Used in genetic data analyses, pattern recognition data, growth curve
+  analysis, and even with meteorological data to identify important
+  climate change patterns.
 \item
-  PCA is related to factor analysis (FA). In FA, the primary goal is to
+  Related to factor analysis (FA). In FA, the primary goal is to
   determine latent `factors' in the data. While PCA tends to be more of
   a descriptive technique, FA uses factor rotations of create a reduced
-  set of factors that typically have even stronger patterns than
-  \(PC\)'s; the remaining unexplained variation is attributed to error.
+  set of factors that typically have even stronger patterns than PCs;
+  the remaining unexplained variation is attributed to error.
 \end{itemize}
 \end{frame}
 
@@ -853,16 +754,12 @@ time points. Which of the 3 graphs is best?
 \]
 
 \begin{itemize}
-\tightlist
 \item
   where
   \(\pmb \Sigma_{r \times r} = \pmb {P}_{r \times r} \pmb {\Lambda}_{r \times r} \pmb P^{\top}_{r \times r}\),
   \(\pmb P = (\pmb e_1,\ ...,\ \pmb e_r)\); \(\pmb \Lambda\) is the
   diagonal matrix of eigenvalues, \(\pmb e_i\)s are eigenvectors.
-  \textbf{(see the eigen-decomposition section in the Matrix notes)}
-\item
-  Note the number of eigen vectors (and values) is the same as the
-  number of variables (\(r\)).
+  \textbf{(check the eigen-decomposition section in the Matrix notes)}
 \item
   The quantity \(\frac {\lambda_i} {\sum \lambda_j}\) indicates the
   proportion of variability in the data accounted for by \(PC_i\).
@@ -870,27 +767,22 @@ time points. Which of the 3 graphs is best?
   In principal components analysis:
 
   \begin{itemize}
-  \tightlist
   \item
     Eigenvalues indicate magnitude of variances of the principle
-    components (\(PC\)'s)
+    components (PC's)
   \item
-    Eigenvectors indicate direction of the \(PC\)'s.
+    Eigenvectors indicate direction of the PC's.
   \end{itemize}
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Example: Aspirin/eNO data}
-\protect\hypertarget{example-aspirineno-data}{}
+\begin{frame}{Applications: Aspirin/eNO data}
+\protect\hypertarget{applications-aspirineno-data}{}
 \begin{itemize}
-\tightlist
-\item
-  Subjects with aspirin allergies; outcome is eNO pre and post
 \item
   Aspirin/eNO data, pre and post-aspirin challenge variables
 
   \begin{itemize}
-  \tightlist
   \item
     Only 2 variables, hence only 2 principle components
   \item
@@ -905,8 +797,8 @@ time points. Which of the 3 graphs is best?
   \(PC_2 = \pmb e_2^{\top} \begin{pmatrix} Y_1\\ Y_2 \end{pmatrix}\),
   where \(\pmb e_1\) and \(\pmb e_2\) are the eigenvectors associated
   with \(\lambda_1\) and \(\lambda_2\), respectively, where
-  \textcolor{magenta}{$\lambda_1 \leq \lambda_2$}, and \(Y_1\) and
-  \(Y_2\) are the original variables.
+  \(\lambda_1 \leq \lambda_2\), and \(Y_1\) and \(Y_2\) are the original
+  variables.
 \end{itemize}
 
 \[
@@ -918,15 +810,23 @@ PC_2 = -0.86 Y_1 + 0.51 Y_2
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-9}{}
+\protect\hypertarget{section-11}{}
+Aspirin challenge data. These are graphs of pre and post challenge eNO
+values for subjects with aspirin allergies. Here is the same graph, with
+a confidence ellipse superimposed. Note that the long side of the
+ellipse extends in the direction of PC1, while 90 degrees to that is
+PC2.
+
+\tiny
+
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f18} \end{center}
+
+\tiny
+\end{frame}
+
+\begin{frame}{}
+\protect\hypertarget{section-12}{}
 \begin{itemize}
-\tightlist
-\item
-  Scatterplot of pre and post challenge eNO values.
-\item
-  A confidence ellipse has been superimposed. Note that the long side of
-  the ellipse extends in the direction of \(PC1\), while 90 degrees to
-  that is \(PC2\).
 \item
   \(PC1\) is a weighted average eNO value (with a higher weight given to
   the post measurement, since it contained more variability); well call
@@ -936,36 +836,29 @@ PC_2 = -0.86 Y_1 + 0.51 Y_2
   subjects with relatively low values did not react as strongly to the
   aspirin challenge, while subjects with higher values had post \((Y2)\)
   measurements that were much higher than pre measurements. For this
-  reason, we can call \(PC2\) the `reactivity' component. \tiny
+  reason, we can call \(PC2\) the `reactivity' component.
 \end{itemize}
 
-\begin{center}\includegraphics[width=0.4\linewidth]{figs_L2/L2-f19} \end{center}
+\tiny
+
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/L2-f19} \end{center}
 
 \tiny
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-10}{}
+\protect\hypertarget{section-13}{}
 This scatterplot is really the same as the previous one (with the
-confidence ellipse); it is just tilted and stretched.
-
-\begin{itemize}
-\tightlist
-\item
-  It allows us to see some patterns that we wouldn't otherwise see so
-  easily. In particular, the subject to the far left could be considered
-  an outlier on the reactivity component (\(PC2\)).
-\item
-  If we go back to the original values, we see that their pre eNO value
-  was 80.5, and post value was 79.1, which is unusual because after the
-  aspirin challenge, we would expect most subjects to increase in eNO,
-  particularly those with higher starting values.
-\end{itemize}
-
-\tiny
-
-(Some other subjects also had drops in eNO, but they were ones that had
-smaller pre eNO values -- the lower middle scores on the plot.
+confidence ellipse); it is just tilted and stretched. However, it allows
+us to see some patterns that we wouldn't otherwise see so easily. In
+particular, the subject to the far left could be considered an outlier
+on the reactivity component (\(PC2\)). If we go back to the original
+values, we see that their pre eNO value was 80.5, and post value was
+79.1, which is unusual because after the aspirin challenge, we would
+expect most subjects to increase in eNO, particularly those with higher
+starting values. (Some other subjects also had drops in eNO, but they
+were ones that had smaller pre eNO values -- the lower middle scores on
+the plot.
 
 \tiny
 
@@ -975,38 +868,26 @@ smaller pre eNO values -- the lower middle scores on the plot.
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-11}{}
-\begin{itemize}
-\tightlist
-\item
-  The data shows that in fact it was unusual. Those on the far right
-  were more common. Another point that stands out is the high point on
-  \(PC1\) -- the subject had a very `average' eNO value and did in fact
-  increase from pre to post.\\
-\item
-  Note that there are several different ways that \(PC\)'s can be
-  standardized. For example, in SAS, \(PC\)'s are mean corrected. In the
-  previous plot, no standardization was done.
-\end{itemize}
+\protect\hypertarget{section-14}{}
+The data shows that in fact it was unusual. Those on the far right were
+more common. Another point that stands out is the high point on \(PC1\)
+-- the subject had a very `average' eNO value and did in fact increase
+from pre to post.
+
+Note that there are several different ways that \(PC\)'s can be
+standardized. For example, in SAS, \(PC\)'s are mean corrected. In the
+previous plot, no standardization was done.
 \end{frame}
 
-\begin{frame}[fragile]{The Ramus data}
+\begin{frame}{The Ramus data}
 \protect\hypertarget{the-ramus-data}{}
-The Ramus data - Ramus bone in the jaw for boys. Each boy was measured
-at 8, 8.5, 9, and 9.5 years. The following SAS code can be used to carry
-out a standard PCA.
+The Ramus data (presented earlier) involves measurements of the Ramus
+bone in the jaw for boys. Each boy was measured at 8, 8.5, 9, and 9.5
+years. Here, we have 4 variables, which are the measurements at each of
+the ages. The following SAS code can be used to carry out a standard
+PCA. The output and relevant graphs follow.
 
 \tiny
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\DocumentationTok{\#\# remove the boy column, and get cov matrix}
-\NormalTok{ramus\_cov }\OtherTok{\textless{}{-}} \FunctionTok{cov}\NormalTok{(ramus\_w[, }\SpecialCharTok{{-}}\DecValTok{1}\NormalTok{])}
-\DocumentationTok{\#\# turn cov into cor}
-\NormalTok{ramus\_cor }\OtherTok{\textless{}{-}} \FunctionTok{cov2cor}\NormalTok{(ramus\_cov)}
-\NormalTok{knitr}\SpecialCharTok{::}\FunctionTok{kable}\NormalTok{(ramus\_cor)}
-\end{Highlighting}
-\end{Shaded}
 
 \begin{longtable}[]{@{}lrrrr@{}}
 \toprule
@@ -1020,18 +901,17 @@ out a standard PCA.
 \bottomrule
 \end{longtable}
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\DocumentationTok{\#\# do pca using stats::prcomp() {-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}{-}}
-\NormalTok{pca\_fit }\OtherTok{\textless{}{-}}\NormalTok{ stats}\SpecialCharTok{::}\FunctionTok{prcomp}\NormalTok{(ramus\_cor, }\AttributeTok{scale =}\NormalTok{ F, }\AttributeTok{center =}\NormalTok{ F)}
-\NormalTok{vars\_pca }\OtherTok{\textless{}{-}}\NormalTok{ (pca\_fit}\SpecialCharTok{$}\NormalTok{sdev)}\SpecialCharTok{\^{}}\DecValTok{2}
-\NormalTok{dirs\_pca }\OtherTok{\textless{}{-}}\NormalTok{ pca\_fit}\SpecialCharTok{$}\NormalTok{rotation}
-\DocumentationTok{\#\# check the pca result yourself}
-\CommentTok{\# str(pca\_fit)}
-\CommentTok{\# knitr::kable(vars\_pca)}
-\NormalTok{knitr}\SpecialCharTok{::}\FunctionTok{kable}\NormalTok{(dirs\_pca)}
-\end{Highlighting}
-\end{Shaded}
+\begin{longtable}[]{@{}r@{}}
+\toprule
+x\tabularnewline
+\midrule
+\endhead
+4.5536658\tabularnewline
+0.0216922\tabularnewline
+0.0003425\tabularnewline
+0.0000937\tabularnewline
+\bottomrule
+\end{longtable}
 
 \begin{longtable}[]{@{}lrrrr@{}}
 \toprule
@@ -1048,89 +928,75 @@ out a standard PCA.
 \tiny
 \end{frame}
 
-\begin{frame}{SAS code for Ramus data}
-\protect\hypertarget{sas-code-for-ramus-data}{}
+\begin{frame}{}
+\protect\hypertarget{section-15}{}
 \tiny
 
-\begin{center}\includegraphics[width=0.86\linewidth]{figs_L2/f22} \end{center}
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/prcomp plot-1} \end{center}
 
-\tiny
-\tiny
-
-\begin{center}\includegraphics[width=0.5\linewidth]{figs_L2/f21} \end{center}
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/prcomp plot-2} \end{center}
 
 \tiny
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-12}{}
+\protect\hypertarget{section-16}{}
+\tiny
+
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/unnamed-chunk-9-1} \end{center}
+
+\tiny
+\end{frame}
+
+\begin{frame}{}
+\protect\hypertarget{section-17}{}
+\tiny
+
+\begin{center}\includegraphics[width=0.4\linewidth]{figs_L2/f22} \end{center}
+
+\tiny
+
+\tiny
+
+\begin{center}\includegraphics[width=0.4\linewidth]{figs_L2/f21} \end{center}
+
+\tiny
+\end{frame}
+
+\begin{frame}{}
+\protect\hypertarget{section-18}{}
 Original line graph of data, with markers to 3 subjects with unusually
 large growth. These subjects are the same as those 3 on the right side
 of the previous graph.
 
 \tiny
 
-\begin{center}\includegraphics[width=0.95\linewidth]{figs_L2/f23} \end{center}
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/unnamed-chunk-12-1} \end{center}
+
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/f23} \end{center}
 
 \tiny
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-13}{}
-Plot of \(PC2\) versus \(PC3\). This graph further breaks down the kids
-with unusual large growth into those with a quadratic trend (1 subject)
-and those without stronger quadratic trend (2 on the left). Also see the
+\protect\hypertarget{section-19}{}
+Plot of PC2 versus PC3. This graph further breaks down the kids with
+unusual large growth into those with a quadratic trend (1 subject) and
+those without stronger quadratic trend (2 on the left). Also see the
 previous graph.
 
 \tiny
 
-\begin{center}\includegraphics[width=0.8\linewidth]{figs_L2/f24} \end{center}
-
-\tiny
-\end{frame}
-
-\begin{frame}[fragile]{R codes for PC's plots}
-\protect\hypertarget{r-codes-for-pcs-plots}{}
-\tiny
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\DocumentationTok{\#\# the projection of original data in the direction of PC\textquotesingle{}s}
-\NormalTok{PC1 }\OtherTok{\textless{}{-}} \SpecialCharTok{{-}}\NormalTok{dirs\_pca[, }\DecValTok{1}\NormalTok{] }\SpecialCharTok{\%*\%} \FunctionTok{t}\NormalTok{(ramus\_w[, }\SpecialCharTok{{-}}\DecValTok{1}\NormalTok{])}
-\NormalTok{PC2 }\OtherTok{\textless{}{-}}\NormalTok{ dirs\_pca[, }\DecValTok{2}\NormalTok{] }\SpecialCharTok{\%*\%} \FunctionTok{t}\NormalTok{(ramus\_w[, }\SpecialCharTok{{-}}\DecValTok{1}\NormalTok{])}
-\NormalTok{PC3 }\OtherTok{\textless{}{-}}\NormalTok{ dirs\_pca[, }\DecValTok{3}\NormalTok{] }\SpecialCharTok{\%*\%} \FunctionTok{t}\NormalTok{(ramus\_w[, }\SpecialCharTok{{-}}\DecValTok{1}\NormalTok{])}
-\DocumentationTok{\#\# set up the layout of plots}
-\NormalTok{op }\OtherTok{\textless{}{-}} \FunctionTok{par}\NormalTok{(}\AttributeTok{mfrow =} \FunctionTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{, }\DecValTok{2}\NormalTok{))}
-\FunctionTok{plot}\NormalTok{(PC1, PC2)}
-\FunctionTok{plot}\NormalTok{(PC2, PC3)}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{center}\includegraphics[width=0.8\linewidth]{figs_L2/prcomp plot-1} \end{center}
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\FunctionTok{par}\NormalTok{(op)}
-\end{Highlighting}
-\end{Shaded}
+\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/f24} \end{center}
 
 \tiny
 \end{frame}
 
 \begin{frame}{}
-\protect\hypertarget{section-14}{}
-\tiny
-
-\begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/unnamed-chunk-12-1} \end{center}
-
-\tiny
-\end{frame}
-
-\begin{frame}{}
-\protect\hypertarget{section-15}{}
-We can also identify subjects with stronger values of \(PC3\) and
-\(PC4\) on the original line graph. (Other subjects are removed in order
-to see patterns more clearly.
+\protect\hypertarget{section-20}{}
+We can also identify subjects with stronger values of PC3 and PC4 on the
+original line graph. (Other subjects are removed in order to see
+patterns more clearly.
 
 This PCA allowed us to see quickly subjects with more unusual trends. It
 also showed us that the variability in the data is captured through
@@ -1144,26 +1010,6 @@ between-subject variability could be captured by the `intercept' and
 \begin{center}\includegraphics[width=0.6\linewidth]{figs_L2/f25} \end{center}
 
 \tiny
-\end{frame}
-
-\hypertarget{summary}{%
-\section{Summary}\label{summary}}
-
-\begin{frame}{Summary}
-\protect\hypertarget{summary-1}{}
-\begin{itemize}
-\tightlist
-\item
-  Line graphs/ spaghetti plots
-\item
-  Scatterplots
-\item
-  Graphs that show between and within-subject variability
-\item
-  Lasagna plot, pace chart, graphs for unequally spaced data
-\item
-  PCA
-\end{itemize}
 \end{frame}
 
 \end{document}
